--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ ALL SIMULATORS ARE IN /simulators FOLDER ONLY.
 <html lang="en" class="h-full">
  <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+  <meta name="viewport" content="width=1200, initial-scale=0.35">
   <title>Electricity Lab</title>
   <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#F59E0B">
@@ -4420,6 +4420,7 @@ if ('serviceWorker' in navigator) {
 </script>
  </body>
 </html>
+
 
 
 
