--- a/simulators/magnetism-part.html
+++ b/simulators/magnetism-part.html
@@ -133,6 +133,7 @@
       cursor: grab;
       width: 100%;
       height: 400px;
+      touch-action: none;
     }
 
     canvas:active {
@@ -657,6 +658,20 @@
       });
     }
 
+    // Helper: normalize mouse & touch event positions
+    function getEventPosition(e) {
+      if (e.touches && e.touches.length > 0) {
+        return {
+          x: e.touches[0].clientX,
+          y: e.touches[0].clientY
+        };
+      }
+      return {
+        x: e.clientX,
+        y: e.clientY
+      };
+    }
+
     // ===== Sound Effects System =====
     const SoundFX = {
       context: null,
@@ -992,9 +1007,12 @@
 
       setupEventListeners() {
         this.canvas.addEventListener('mousedown', (e) => this.handleMouseDown(e));
+        this.canvas.addEventListener('touchstart', (e) => this.handleMouseDown(e));
         this.canvas.addEventListener('mousemove', (e) => this.handleMouseMove(e));
+        document.addEventListener('touchmove', (e) => this.handleMouseMove(e));
         this.canvas.addEventListener('mouseup', () => this.handleMouseUp());
         this.canvas.addEventListener('mouseleave', () => this.handleMouseUp());
+        document.addEventListener('touchend', () => this.handleMouseUp());
 
         document.getElementById('addMagnet').addEventListener('click', () => this.addMagnet());
         document.getElementById('removeMagnet').addEventListener('click', () => this.removeSelectedMagnet());
@@ -1011,9 +1029,10 @@
 
       getMousePos(e) {
         const rect = this.canvas.getBoundingClientRect();
+        const pos = getEventPosition(e);
         return {
-          x: e.clientX - rect.left,
-          y: e.clientY - rect.top
+          x: pos.x - rect.left,
+          y: pos.y - rect.top
         };
       }
 
@@ -2414,9 +2433,10 @@
 
       getMousePos(e) {
         const rect = this.canvas.getBoundingClientRect();
+        const pos = getEventPosition(e);
         return {
-          x: e.clientX - rect.left,
-          y: e.clientY - rect.top
+          x: pos.x - rect.left,
+          y: pos.y - rect.top
         };
       }
 
@@ -2906,9 +2926,12 @@
       setupEventListeners() {
         // Canvas drag events
         this.canvas.addEventListener('mousedown', (e) => this.handleMouseDown(e));
+        this.canvas.addEventListener('touchstart', (e) => this.handleMouseDown(e));
         this.canvas.addEventListener('mousemove', (e) => this.handleMouseMove(e));
+        document.addEventListener('touchmove', (e) => this.handleMouseMove(e));
         this.canvas.addEventListener('mouseup', () => this.handleMouseUp());
         this.canvas.addEventListener('mouseleave', () => this.handleMouseUp());
+        document.addEventListener('touchend', () => this.handleMouseUp());
         this.canvas.addEventListener('dblclick', (e) => this.handleDoubleClick(e));
 
         document.getElementById('magnetConfig').addEventListener('change', (e) => {
@@ -2932,9 +2955,10 @@
 
       getMousePos(e) {
         const rect = this.canvas.getBoundingClientRect();
+        const pos = getEventPosition(e);
         return {
-          x: e.clientX - rect.left,
-          y: e.clientY - rect.top
+          x: pos.x - rect.left,
+          y: pos.y - rect.top
         };
       }
 
@@ -3258,9 +3282,12 @@
         
         // Canvas drag for paper clips
         this.canvas.addEventListener('mousedown', (e) => this.handleMouseDown(e));
+        this.canvas.addEventListener('touchstart', (e) => this.handleMouseDown(e));
         this.canvas.addEventListener('mousemove', (e) => this.handleMouseMove(e));
+        document.addEventListener('touchmove', (e) => this.handleMouseMove(e));
         this.canvas.addEventListener('mouseup', () => this.handleMouseUp());
         this.canvas.addEventListener('mouseleave', () => this.handleMouseUp());
+        document.addEventListener('touchend', () => this.handleMouseUp());
 
         // Control sliders
         document.getElementById('coilTurns').addEventListener('input', (e) => {
@@ -3446,9 +3473,10 @@
 
       getMousePos(e) {
         const rect = this.canvas.getBoundingClientRect();
+        const pos = getEventPosition(e);
         return {
-          x: e.clientX - rect.left,
-          y: e.clientY - rect.top
+          x: pos.x - rect.left,
+          y: pos.y - rect.top
         };
       }
 
